redirect without error. need to toggle link

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-MONGODB_URI = mongodb://localhost:27017/blog'
+MONGODB_URI = mongodb://localhost:27017/blog
+
+SERVER_BASE_URI = http://localhost:3000
+SERVER_DEFAULT_PORT = 3000
